--- a/galeria.html
+++ b/galeria.html
@@ -162,15 +162,15 @@ p{
                         <a class="nav-link" href="#">Servicios</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="Contactanos.html">Contactanos</a>
+                        <a class="nav-link" href="contactanos.html">Contactanos</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false bg-succes">
                           Opciones
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="Contactanos.html">Adopta una Mascota</a></li>
-                          <li><a class="dropdown-item" href="Contactanos.html">¿Como Adoptar?</a></li>
+                          <li><a class="dropdown-item" href="contactanos.html">Adopta una Mascota</a></li>
+                          <li><a class="dropdown-item" href="contactanos.html">¿Como Adoptar?</a></li>
                           <li><a class="dropdown-item" href="galeria.html">Galeria de Mascotas</a></li>
                         </ul>
                       </li>
