--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ p{
                               Opciones
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                              <li><a class="dropdown-item" href="galeria.html">Adopta una Mascota</a></li>
-                              <li><a class="dropdown-item" href="Contactanos.html">¿Como Adoptar?</a></li>
+                              <li><a class="dropdown-item" href=contactanos.html">Adopta una Mascota</a></li>
+                              <li><a class="dropdown-item" href="contactanos.html">¿Como Adoptar?</a></li>
                               <li><a class="dropdown-item" href="galeria.html">Galeria de Mascotas</a></li>
                             </ul>
                           </li>
